--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,19 +1,28 @@
+.navbar-brand{
+  font-size: 30px;
+  font-weight: bold;
+  font-style: inherit;
+}
 header {
   width: 100%;
-  // background: linear-gradient(to right, orange, yellow);
-  background-image: url('https://www.medicalfacts.it/wp-content/uploads/2020/02/bigstock-Junk-Food-Concept-Unhealthy-F-279475684-900x580.jpg');
+  height:500px;
+  background-image: url('https://www.vitaminity.com/it/pub/media/blog/cache/840x473/magefan_blog/VITAMINITY_CIBI_SANI.jpg');
   background-position: center;
   background-size: cover;
 
   & .layover{
-    width: 100%;
+    margin:70px auto 10px auto;
+    width: 80%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.3);
   }
   & nav {
-    background: linear-gradient(to right, #ffeae4, #ffeae4c9);
+    background-color:rgb(255, 191, 0, 0.7) ;
+   // background: linear-gradient(to center, #e2eeee, #FFBF00);
     position: fixed;
+    z-index:80;
     top: 0;
+    right:0;
   }
 
   & nav div ul li {
@@ -23,8 +32,9 @@ header {
    & .header-content-guest{
      display: flex;
      justify-content: center;
-     background-color: rgba(255, 255, 255, 0.705);
-     
+     background-color:transparent;
+
+
 
      @media screen and(max-width: 992px){
        flex-direction: column-reverse;
@@ -34,7 +44,7 @@ header {
      & .hcg-left{
        width: 50%;
        height: 300px;
-       // background-color: pink;
+       margin-top:60px;
        display: flex;
        flex-direction: column;
        justify-content: center;
@@ -46,8 +56,9 @@ header {
 
 
        & h2 {
-         color: #eb6338;
-        font-size: 50px;
+         color: white;
+         font-family:Arial, Helvetica, sans-serif;
+        font-size: 70px;
         text-align: center;
         @media screen and(max-width: 992px){
           font-size: 40px;
@@ -60,35 +71,28 @@ header {
       & .header-searchbar{
         padding-top: 20px;
         display: flex;
-        align-items: center;
+        align-items: flex-end;
 
         @media screen and(max-width: 766px){
           flex-direction: column;
         }
 
         & input{
-          width: 200px;
+          width: 300px;
+          height:50px;
           border-radius: 5px;
           margin-right: 20px;
           margin-top: 20px;
-
-
-        }
-
-        & button {
-          padding: 4px 24px;
-          border-radius: 10px;
-          background-color: #eb6338;
-          border: 0px;
+          text-align:justify;
+          padding:10px;
           font-size: 20px;
-          color: yellow;
-
 
         }
+
         & .container-search {
-          background-color: transparent;
+          background-color:white;
           @media screen and(max-width: 766px){
-            background-color: transparent;
+          background-color: transparent;
 
           }
           & ul {
@@ -107,9 +111,8 @@ header {
      }
 
      & div.hcg-right{
-       width: 40%;
+       width: 60%;
        height: 300px;
-       // background-color: green;
        display: flex;
        justify-content: center;
        align-items: center;
@@ -117,16 +120,17 @@ header {
         height: 200px;
        }
 
-       & img {
-         height: 150px;
-         margin-right: 10px;
+      //  & img {
+      //    height: 250px;
+      //    margin-right: 10px;
 
-       }
+      //  }
 
        & i {
-         font-size: 100px;
-        color: #eb6338;
-        margin-right: 10px;
+         font-size: 200px;
+        color:rgb(255, 191, 0);
+        margin-right: 30px;
+        margin-top:50px;
 
 
        }
