--- a/resources/sass/partials/_footer.scss
+++ b/resources/sass/partials/_footer.scss
@@ -13,10 +13,22 @@ footer {
         padding: 20px;
         background-color:#464646;
         color:white;
+        
         @media screen and(max-width:992px) {
           width: 100%;
           margin: 10px auto;
           text-align: center;
+        }
+        @media screen and(max-width: 768px){
+          width: calc(100% / 2 - 10px);
+          margin-bottom: 20px;
+          
+        }
+        
+        @media screen and (max-width: 576px) {
+            width: 100%;
+            margin-bottom: 20px;
+            
         }
 
      h3{
@@ -28,7 +40,7 @@ footer {
             text-decoration: none;
             color:rgb(209, 207, 204);
             &:hover{
-                color:orange;  
+                color:#ffd803;  
               @include transition;
 
             }
