--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,7 @@
 @import "partials/header";
 @import "partials/footer";
 @import "partials/main";
+@import "partials/show";
 @import "partials/registrazione";
 
 
