--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -1,163 +1,39 @@
-.jumbotrone{
-    text-align: center;
-        img{
-            width: 100%;
-            height: 250px;
-            object-fit: cover;
-            z-index: -1;
-        }
+body{
+  font-family: 'Poppins', sans-serif;
+}
+
+.header_diversa{
+  height: 100px;
+  background: bisque;
 }
 
 
-.menu_header_container{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    text-align:center;
-    height: 90px;
-    width: 80%;
-    margin:0 auto;
-    background-color: lightgrey;
-    .header_information{
-        display: flex;
-        .logo{
-            img{
-                height:80px;
-            }
-        }
-    }
-    .header_methods{
-        display: flex;
-        .box_l{
-            float: left;
-            padding: 20px;
-        }
-        .box_r{
-            float: right;
-            text-align: left;
-        }
-        i{
-            font-size: 35px;
-        }
-    }
+// .jumbotrone{
+//   width: 100%;
+//   height:300px;
+//   background-image: url('https://www.melarossa.it/wp-content/uploads/2020/03/junk-food-altera-memoria-controllo-appetito.jpg?x96257');
+//   background-position: center;
+//   background-size: cover;
+// }
+
+.carousel-item{
+  height:600px;
 }
 
-.menu_main_container{
-    background-color: white;
-    width: 80%;
-    margin: auto;
-    display: flex;
-    justify-content:space-around;
-    .title_menu{
-        display: flex;
-        padding-left: 50px;
-        h3{
-            padding-right:20px
-        }
-    }
-    
+.carousel-image-1{
+  background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),
+  url('https://assets.tmecosys.com/image/upload/t_web767x639/img/recipe/ras/Assets/f527ea09-0a95-4b2b-85d3-c30c09399632/Derivates/3d14d9c6-2eda-45d5-a103-d30c90eb25f1.jpg');
+  background-size:cover;
 }
 
-
-.card-container{
-  height: 420px;
-  position: relative;
-  background-color: white;
-  overflow: hidden;
-  z-index: 20;
-  box-shadow: 2px 2px 2px #B3B3B3;
-  margin: 20px;
+.carousel-image-2{
+  background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),
+  url('https://www.sempliceveloce.it/wordpress/wp-content/uploads/2020/04/baba_rustico_Napoletano.jpg');
+  background-size:cover;
 }
 
-.pricebox {
-  height: 50px;
-  width: 100px;
-  position: absolute;
-  background-color: #FF5351;
-  display: table;
+.carousel-image-3{
+  background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),
+  url('https://www.oetker.ch/Recipe/Recipes/oetker.ch/ch-it/sweets/image-thumb__14899__RecipeDetail/torta-brownie-a-strati.jpg://https://www.sempliceveloce.it/wordpress/wp-content/uploads/2014/04/rustico_napoletano_finale-640x420.jpg.tmecosys.com/image/upload/t_web767x639/img/recipe/ras/Assets/f527ea09-0a95-4b2b-85d3-c30c09399632/Derivates/3d14d9c6-2eda-45d5-a103-d30c90eb25f1.jpg');
+  background-size:cover;
 }
-.price {
-  display: table-cell;
-  vertical-align: middle;
-  color: white;
-  font-family: Oswald;
-  font-size: 20px;
-  text-align: center;
-}
-
-.buybox {
-  height: 50px;
-  width: 100%;
-  position: absolute;
-  background-color: #008cba;
-  display: table;
-  bottom: 0;
-}
-
-.add-to-cart {
-  display: table-cell;
-  vertical-align: middle;
-  color: white;
-  font-family: Oswald;
-  font-size: 20px;
-  text-align: center;
-  cursor: pointer;
-}
-
-.card {
-  display: table;
-  height: 100%;
-  width: 100%;
-}
-
-.product-overlay {
-  height: 100%;
-  width: 100%;
-  z-index: 10;
-  position: absolute;
-}
-
-.card-inner {
-  display: table-cell;
-  vertical-align: middle;
-}
-
-
-.proimage {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-height: 90%;
-  max-width: 90%; 
-}
-
-.page-header h1 {
-  text-align: center;
-  font-family: Oswald;
-  margin-top: 70px;
-}
-
-.shopping-cart {
-  position: fixed;
-  top: 55px;
-  right: 40px;
-  display: none;
-  background-color: #fff;
-  box-shadow: 2px 2px 2px #B3B3B3;
-  padding: 15px;
-  z-index: 999;
-}
-
-.cart-title {
-  text-align: center;
-  font-weight: bold;
-}
-
-.show {
-  display: block;
-}
-
-.clear-cart {
-  width: 100%;
-}
-
