--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -18,9 +18,59 @@ body{
 
 .carousel-item{
   height:600px;
-}
 
-.carousel-image-1{
+
+
+  .title-color{
+    color:#fff;
+  }
+  .btn-color{
+    background: #000;
+    color:#fff;
+    &:hover{
+      color:gray;
+    }
+  }
+  .slide-btn{
+    display: inline-block;
+    vertical-align: middle;
+    transform: perspective(1px) translateZ(0);
+    box-shadow:0 0 1px rgba(0,0,0,0);
+    &:hover,
+    &:focus,
+    &:active{
+      animation-name:slide-btn;
+      animation-duration:1s;
+      animation-timing-function:ease-in-out;
+      animation-iteration-count: 1;
+    }
+    
+  }
+  
+    @keyframes slide-btn{
+    16%{
+      transform: translateY(8px);
+    }
+    33%{
+      transform:translateY(-6px)
+    }
+    50%{
+      transform: translateY(4px);
+    }
+    65%{
+      transform: translateY(-2px);
+    }
+    85%{
+      transform: translateY(1px);
+    }
+    100%{
+      transform: translateY(0);
+    }
+  }
+}
+  
+  
+  .carousel-image-1{
   background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),
   url('https://assets.tmecosys.com/image/upload/t_web767x639/img/recipe/ras/Assets/f527ea09-0a95-4b2b-85d3-c30c09399632/Derivates/3d14d9c6-2eda-45d5-a103-d30c90eb25f1.jpg');
   background-size:cover;
@@ -36,4 +86,44 @@ body{
   background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),
   url('https://www.oetker.ch/Recipe/Recipes/oetker.ch/ch-it/sweets/image-thumb__14899__RecipeDetail/torta-brownie-a-strati.jpg://https://www.sempliceveloce.it/wordpress/wp-content/uploads/2014/04/rustico_napoletano_finale-640x420.jpg.tmecosys.com/image/upload/t_web767x639/img/recipe/ras/Assets/f527ea09-0a95-4b2b-85d3-c30c09399632/Derivates/3d14d9c6-2eda-45d5-a103-d30c90eb25f1.jpg');
   background-size:cover;
+}
+
+// sezione profili e info ristorante
+
+
+
+
+
+
+
+// sezione piatti e tipologie
+#products{
+  background: black;
+  .product-title{
+    color:white;
+    .single-item{
+      display:inline-block;
+      vertical-align: middle;
+      transform: perspective(1px) translateZ(0);
+      box-shadow: 0 0 1px rgb(247,241,241);
+      position: relative;
+      transition-duration:0.3s;
+      transition-property: transform;
+      cursor:pointer;
+      &::before{
+        pointer-events: none;
+        position:absolute;
+        z-index:-1;
+        content:"";
+        top:100%;
+        left:5%;
+        height: 10px;
+        width: 90%;
+        opacity:0;
+        background: radial-gradient(ellipse at center, rgba(248,248,248,0.35)0%, rgba(247,244,244,0)80%);
+        transition-duration:0.3s;
+        transition property:transfer
+      }
+    }
+  }
 }
