--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -4,22 +4,11 @@ body{
 
 .header_diversa{
   height: 100px;
-  background: bisque;
+  background: lightgrey;
 }
-
-
-// .jumbotrone{
-//   width: 100%;
-//   height:300px;
-//   background-image: url('https://www.melarossa.it/wp-content/uploads/2020/03/junk-food-altera-memoria-controllo-appetito.jpg?x96257');
-//   background-position: center;
-//   background-size: cover;
-// }
 
 .carousel-item{
   height:600px;
-
-
 
   .title-color{
     color:#fff;
@@ -110,6 +99,12 @@ body{
       transition-duration:0.3s;
       transition-property: transform;
       cursor:pointer;
+      &:hover,
+      &:focus,
+      &:active{
+        transform:translateY(-5px);
+      }
+
       &::before{
         pointer-events: none;
         position:absolute;
@@ -122,8 +117,83 @@ body{
         opacity:0;
         background: radial-gradient(ellipse at center, rgba(248,248,248,0.35)0%, rgba(247,244,244,0)80%);
         transition-duration:0.3s;
-        transition property:transfer
+        transition-property:transform,opacity;
+        &:hover,
+        &:active{
+          opacity: 1;
+          transform: translateY(5px);
+        }
+      }
+      .img-container{
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        display: inline-block;
+        vertical-align: middle;
+        -webkit-transform: perspective(1px) translateZ(0);
+        transform: perspective(1px) translateZ(0);
+        box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+        -webkit-transition-duration: 0.3s;
+        transition-duration: 0.3s;
+        -webkit-transition-property: box-shadow, transform;
+        transition-property: box-shadow, transform;
+        &:hover{
+          box-shadow: 1px 0px 1px 4px rgba(247, 243, 243, 0.932);
+          -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+        }
+        .product-img{
+          &:focus,
+          &:active{
+            box-shadow: 1px 0px 1px 4px rgba(247, 243, 243, 0.932);
+            -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+          }
+        }
       }
     }
   }
 }
+
+// Sezione sec
+
+.about-sec{
+  margin-top: 25px;
+  background-color: blue;
+  .watch-img{
+    margin-top: 35px;
+    animation-name: imgLeft;
+    animation-duration: 3s;
+  }
+  .text-color{
+    color: #000;
+  }
+  .about-text{
+  animation-name:textRight;
+  animation-duration: 3s;
+  }
+
+    @keyframes textRight {
+    0%{
+      transform:translateX(30px);
+      opacity: 0;
+    }
+    100%{
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+    @keyframes imgLeft {
+    0%{
+      transform:translateX(-120px);
+      opacity: 0;
+    }
+    100%{
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+}
+
+// sezione best seller
