--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -7,8 +7,9 @@ body{
   background: lightgrey;
 }
 
+
 .carousel-item{
-  height:600px;
+  height:450px;
 
   .title-color{
     color:#fff;
@@ -61,19 +62,19 @@ body{
   
   .carousel-image-1{
   background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),
-  url('https://assets.tmecosys.com/image/upload/t_web767x639/img/recipe/ras/Assets/f527ea09-0a95-4b2b-85d3-c30c09399632/Derivates/3d14d9c6-2eda-45d5-a103-d30c90eb25f1.jpg');
-  background-size:cover;
+  url('https://cdn.pixabay.com/photo/2020/06/08/16/49/pizza-5275191_960_720.jpg');
+  background-size: cover;
 }
 
 .carousel-image-2{
   background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),
-  url('https://www.sempliceveloce.it/wordpress/wp-content/uploads/2020/04/baba_rustico_Napoletano.jpg');
+  url('https://cdn.pixabay.com/photo/2020/01/17/16/42/food-4773380_960_720.jpg');
   background-size:cover;
 }
 
 .carousel-image-3{
   background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),
-  url('https://www.oetker.ch/Recipe/Recipes/oetker.ch/ch-it/sweets/image-thumb__14899__RecipeDetail/torta-brownie-a-strati.jpg://https://www.sempliceveloce.it/wordpress/wp-content/uploads/2014/04/rustico_napoletano_finale-640x420.jpg.tmecosys.com/image/upload/t_web767x639/img/recipe/ras/Assets/f527ea09-0a95-4b2b-85d3-c30c09399632/Derivates/3d14d9c6-2eda-45d5-a103-d30c90eb25f1.jpg');
+  url('https://cdn.pixabay.com/photo/2018/01/04/11/40/food-3060458_960_720.jpg');
   background-size:cover;
 }
 
@@ -88,78 +89,79 @@ body{
 // sezione piatti e tipologie
 #products{
   background: black;
-  .product-title{
-    color:white;
-    .single-item{
-      display:inline-block;
-      vertical-align: middle;
-      transform: perspective(1px) translateZ(0);
-      box-shadow: 0 0 1px rgb(247,241,241);
-      position: relative;
-      transition-duration:0.3s;
-      transition-property: transform;
-      cursor:pointer;
-      &:hover,
-      &:focus,
-      &:active{
-        transform:translateY(-5px);
-      }
+    .product-title{
+      color:white;
+    }
+  .single-item{
+    display:inline-block;
+    vertical-align: middle;
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgb(247,241,241);
+    position: relative;
+    transition-duration:0.3s;
+    transition-property: transform;
+    cursor:pointer;
+    &:hover,
+    &:focus,
+    &:active{
+      transform:translateY(-5px);
+    }
 
-      &::before{
-        pointer-events: none;
-        position:absolute;
-        z-index:-1;
-        content:"";
-        top:100%;
-        left:5%;
-        height: 10px;
-        width: 90%;
-        opacity:0;
-        background: radial-gradient(ellipse at center, rgba(248,248,248,0.35)0%, rgba(247,244,244,0)80%);
-        transition-duration:0.3s;
-        transition-property:transform,opacity;
-        &:hover,
-        &:active{
-          opacity: 1;
-          transform: translateY(5px);
-        }
+    &::before{
+      pointer-events: none;
+      position:absolute;
+      z-index:-1;
+      content:"";
+      top:100%;
+      left:5%;
+      height: 10px;
+      width: 90%;
+      opacity:0;
+      background: radial-gradient(ellipse at center, rgba(248,248,248,0.35)0%, rgba(247,244,244,0)80%);
+      transition-duration:0.3s;
+      transition-property:transform,opacity;
+      &:hover,
+      &:active{
+        opacity: 1;
+        transform: translateY(5px);
       }
-      .img-container{
-        position: relative;
-        overflow: hidden;
-        cursor: pointer;
-        display: inline-block;
-        vertical-align: middle;
-        -webkit-transform: perspective(1px) translateZ(0);
-        transform: perspective(1px) translateZ(0);
-        box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-        -webkit-transition-duration: 0.3s;
-        transition-duration: 0.3s;
-        -webkit-transition-property: box-shadow, transform;
-        transition-property: box-shadow, transform;
-        &:hover{
+    }
+    .img-container{
+      position: relative;
+      overflow: hidden;
+      cursor: pointer;
+      display: inline-block;
+      vertical-align: middle;
+      -webkit-transform: perspective(1px) translateZ(0);
+      transform: perspective(1px) translateZ(0);
+      box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+      -webkit-transition-duration: 0.3s;
+      transition-duration: 0.3s;
+      -webkit-transition-property: box-shadow, transform;
+      transition-property: box-shadow, transform;
+      &:hover{
+        box-shadow: 1px 0px 1px 4px rgba(247, 243, 243, 0.932);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+      }
+      .product-img{
+        &:focus,
+        &:active{
           box-shadow: 1px 0px 1px 4px rgba(247, 243, 243, 0.932);
           -webkit-transform: scale(1.1);
           transform: scale(1.1);
         }
-        .product-img{
-          &:focus,
-          &:active{
-            box-shadow: 1px 0px 1px 4px rgba(247, 243, 243, 0.932);
-            -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-          }
-        }
       }
     }
   }
+  
 }
 
 // Sezione sec
 
-.about-sec{
+#about-sec{
   margin-top: 25px;
-  background-color: blue;
+  background-color: aliceblue;
   .watch-img{
     margin-top: 35px;
     animation-name: imgLeft;
@@ -173,6 +175,7 @@ body{
   animation-duration: 3s;
   }
 
+}
     @keyframes textRight {
     0%{
       transform:translateX(30px);
@@ -194,6 +197,4 @@ body{
       opacity: 1;
     }
   }
-}
 
-// sezione best seller
